--- a/CookieCrumbs/styles/style.css
+++ b/CookieCrumbs/styles/style.css
@@ -1,3 +1,32 @@
+div.orderStub{
+	background-color: whitesmoke;
+	margin: 10px 25px;
+	float: left; 
+	width: 20em;
+	border: 1px solid black;
+}
+p.orderNum{
+	text-align: center;
+	height: 1.2em;
+	font-size: 36px;
+	font-family: "Arial Black", Gadget, sans-serif;
+}
+p.orderName{
+	text-align: center;
+	height: 1.2em;
+	font-size: 24px;
+	font-family: Arial, Helvetica, sans-serif;
+
+}
+p.orderMethod{
+	text-align: center;
+	height: 1.2em;
+	font-size: 16px;
+	font-family: Arial, Helvetica, sans-serif;
+}
+ul.orderItems{
+	list-style-type: circle;
+}
 .container{
 	display: flex;
 	font-family: Arial, Helvetica, sans-serif;
@@ -212,7 +241,6 @@ div.menuItem
 #emailAddress,#emailCheck{
 	display: inline;
 }
-
 
 
 
