added customer dashboard

--- a/CookieCrumbs/styles/style.css
+++ b/CookieCrumbs/styles/style.css
@@ -115,7 +115,7 @@ body{
 
 @media only screen and (max-width: 100px){
 	.content{
-		width: 60%;
+		width: 100%;
 	}
 
 }
@@ -305,6 +305,68 @@ div.menuItem
 	display: inline;
 	white-space: nowrap;
 	overflow: hidden;
+}
+
+#menuLink{
+	border: 2px solid #e6ae75;
+	border-radius: 25px;
+	background-image: url("../images/black.png"), url("../images/restaurant.jpg");
+	background-size: 100%;
+	background-position: center;
+	background-blend-mode: overlay;
+	padding: 20px;
+	margin-bottom: 25px;
+	height: 200px;
+	width: 100%;
+}
+#menuLink h1{
+	margin: auto;
+	color: white;
+	font-size: 120px;
+	font-family: cursive;
+}
+.flex-container
+{
+	margin-bottom: 25px;
+	height: 150px;
+	width: 100%;
+	display: flex;
+}
+.flex-child{
+	flex: 1;
+	border: 2px solid #e6ae75;
+	border-radius: 25px;
+}
+
+.link2{
+	background-color: #e6ae75;
+	margin-left: 20px;
+}
+.link2 button{
+	background-color: #e6ae75;
+	width: 80%;
+}
+#orderInput input{
+	background-color: #f0eae4;
+	width: 80%;
+	margin-bottom: 7px;
+	color: black;
+}
+#orderInput button{
+	background-color: #f0eae4;
+	width: 80%;
+}
+#singleOrderButton{
+	width: 100%;
+	height: 100%;
+	margin-top: 2%;
+	font-size: 30px;
+}
+.link1 button{
+	width: 100%;
+	height: 100%;
+	font-size: 30px;
+	background-color: #f0eae4;
 }
 
 
